--- a/markup/basket-remove-item.html
+++ b/markup/basket-remove-item.html
@@ -121,7 +121,7 @@
           <div class="breadcrumbs">
             <div class="container">
               <ul class="breadcrumbs__list">
-                <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Главная
+                <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Главная
                     <svg width="5" height="8" aria-hidden="true">
                       <use xlink:href="#icon-arrow-mini"></use>
                     </svg></a>
